@@ -14,9 +14,9 @@
   <link>https://science-gateway.unidata.ucar.edu/</link>
   <description><![CDATA[]]></description>
   <language>en</language>
-  <pubDate>Fri, 17 Sep 2021 16:31:53 -0600</pubDate>
-  <lastBuildDate>Fri, 17 Sep 2021 16:31:53 -0600</lastBuildDate>
-  <generator>Emacs 27.2 Org-mode 9.4</generator>
+  <pubDate>Fri, 24 Sep 2021 16:50:27 -0600</pubDate>
+  <lastBuildDate>Fri, 24 Sep 2021 16:50:27 -0600</lastBuildDate>
+  <generator>Emacs 27.2 Org-mode 9.4.6</generator>
   <webMaster>chastang at ucar dot edu (Julien Chastang)</webMaster>
   <image>
     <url>https://avatars2.githubusercontent.com/u/613345?s=200&amp;v=4</url>
@@ -28,11 +28,25 @@
     <h2>Table of Contents</h2>
     <div id="text-table-of-contents">
       <ul>
+        <li><a href="#h-F4EE3A44">9/24/2021, Unidata Community Survey</a></li>
         <li><a href="#h-81EC6CA6">9/17/2021, Unidata Science Gateway Presentation at eScience 2021</a></li>
         <li><a href="#h-EA7E234B">8/25/2021, JupyterHub Resources Still Available for Fall 2021 Courses</a></li>
       </ul>
     </div>
   </div>
+
+  <item>
+    <title>Unidata Community Survey</title>
+    <link>https://science-gateway.unidata.ucar.edu/index.html#h-F4EE3A44</link>
+    <author>chastang at ucar dot edu (Julien Chastang)</author>
+    <guid isPermaLink="false">https://science-gateway.unidata.ucar.edu/index.html#h-F4EE3A44</guid>
+    <pubDate>Fri, 24 Sep 2021 00:00:00 -0600</pubDate>
+
+    <description><![CDATA[<p>
+    Make your voice heard on Unidata Science Gateway offerings. Please partake in the <a href="https://bit.ly/2021UnidataSurvey">Unidata Community Survey</a>.
+    </p>
+    ]]></description>
+  </item>
 
   <item>
     <title>Unidata Science Gateway Presentation at eScience 2021</title>
